# remotia

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release-plz.yml  rust.yml
crates/remotia/: CHANGELOG.md  Cargo.toml
crates/remotia-buffer-utils/: CHANGELOG.md  Cargo.toml
crates/remotia-buffer-utils-macros/: CHANGELOG.md  Cargo.toml
crates/remotia-buffer-utils-macros/src/: lib.rs
crates/remotia-buffer-utils/src/: lib.rs  pool.rs  tests.rs
crates/remotia-buffer-utils/src/autodrop_pool/: buffers.rs  mod.rs
crates/remotia-core/: Cargo.toml
crates/remotia-core-capturers/: CHANGELOG.md  Cargo.toml
crates/remotia-core-renderers/: CHANGELOG.md  Cargo.toml
crates/remotia-core-renderers/src/: winit.rs
crates/remotia-core-transmission/: CHANGELOG.md  Cargo.toml
crates/remotia-core/src/: lib.rs  sync_processor.rs  traits.rs  types.rs
crates/remotia-core/src/common/: command_line.rs
crates/remotia-core/src/common/network/: remvsp.rs
crates/remotia-core/src/pipeline/: registry.rs
crates/remotia-core/src/processors/: functional.rs  ticker.rs
crates/remotia-profilation-utils/: Cargo.toml
crates/remotia-profilation-utils/src/: lib.rs
crates/remotia-profilation-utils/src/frame_drop/: timestamp.rs
crates/remotia-profilation-utils/src/time/: profiled_sequential.rs
crates/remotia-serialization-utils/: CHANGELOG.md  Cargo.toml
crates/remotia/src/: lib.rs
examples/configurable_client/: main.rs  utils.rs
examples/configurable_server/: main.rs  utils.rs
examples/remvsp_client/: main.rs
examples/remvsp_server/: main.rs
examples/silo_client/: main.rs
examples/silo_server/: main.rs
examples/silo_srt_server/: main.rs
examples/srt_client/: main.rs
examples/srt_h264_client/: main.rs
examples/srt_h264_server/: main.rs
examples/srt_identity_client/: main.rs
examples/srt_latency_test_receiver/: main.rs
examples/srt_latency_test_sender/: main.rs
examples/srt_server/: main.rs
examples/tcp_h264_client/: main.rs
examples/waterfall_client/: main.rs
paper-experiments/: Cargo.toml  compress.sh  compress_all.sh
paper-experiments/examples/codec_latency_test/: main.rs
paper-experiments/examples/framedump_client/: main.rs
paper-experiments/examples/framedump_server/: main.rs
paper-experiments/examples/srt_100ms_client/: main.rs
paper-experiments/examples/srt_100ms_server/: main.rs
paper-experiments/examples/srt_150ms_client/: main.rs
paper-experiments/examples/srt_150ms_server/: main.rs
paper-experiments/examples/srt_50ms_client/: main.rs
paper-experiments/examples/srt_50ms_server/: main.rs
paper-experiments/netem/: reset.sh
paper-experiments/netem/60mbit/: netem_setup.sh
paper-experiments/netem/60mbit_delay_packetloss/: netem_setup.sh
paper-experiments/netem/60mbit_packetloss/: netem_setup.sh
paper-experiments/scripts/: all.sh  analytics.py  droprate.py
remotia/: Cargo.toml  build.rs
remotia-buffer-utils/: Cargo.toml
remotia-buffer-utils/src/: lib.rs  pool.rs  pool_registry.rs  tests.rs
remotia-core/: Cargo.toml
remotia-core-capturers/: Cargo.toml
remotia-core-capturers/src/: lib.rs  scrap.rs  y4m.rs
remotia-core-codecs/: Cargo.toml
remotia-core-codecs/src/: lib.rs
remotia-core-codecs/src/yuv/: mod.rs  rgba_to_yuv.rs  yuv_to_rgba.rs
remotia-core-codecs/src/yuv420p/: encoder.rs
remotia-core-loggers/: Cargo.toml
remotia-core-loggers/src/: errors.rs  lib.rs  printer.rs  stats.rs
remotia-core-renderers/: Cargo.toml
remotia-core-renderers/src/: beryllium.rs  lib.rs  winit.rs
remotia-core-transmission/: Cargo.toml
remotia-core-transmission/src/: receiver.rs  sender.rs
remotia-core/src/: error.rs  lib.rs  traits.rs  types.rs
remotia-core/src/common/: mod.rs  profiling.rs
remotia-core/src/common/feedback/: mod.rs
remotia-core/src/common/helpers/: mod.rs  silo.rs  time.rs
remotia-core/src/common/network/: mod.rs
remotia-core/src/pipeline/: component.rs  feeder.rs  mod.rs
remotia-core/src/pipeline/ascode/: component.rs  feeder.rs  mod.rs
remotia-core/src/processors/: async_functional.rs  clone_switch.rs  error_switch.rs  functional.rs  key_check.rs  mod.rs  pool_switch.rs  switch.rs
remotia-core/src/processors/containers/: mod.rs  sequential.rs
remotia-core/src/processors/debug/: mod.rs  random_dropper.rs
remotia-core/src/processors/frame_drop/: threshold.rs  timestamp.rs
remotia-ffmpeg-codecs/: Cargo.toml
remotia-ffmpeg-codecs/src/: lib.rs
remotia-ffmpeg-codecs/src/decoders/: h264.rs  hevc.rs  libvpx_vp9.rs  mod.rs
remotia-ffmpeg-codecs/src/decoders/utils/: mod.rs  yuv2bgr.rs
remotia-ffmpeg-codecs/src/encoders/: libvpx_vp9.rs  mod.rs  x264.rs  x265.rs
remotia-ffmpeg-codecs/src/encoders/asynchronous/: mod.rs
remotia-ffmpeg-codecs/src/encoders/asynchronous/encoders/: h264.rs
remotia-ffmpeg-codecs/src/encoders/frame_builders/: bgr.rs  mod.rs  yuv420p.rs
remotia-profilation-utils/: Cargo.toml
remotia-profilation-utils/src/: lib.rs
remotia-samples/: .gitignore  Cargo.toml
remotia-samples/examples/async_h264_srt_server/: main.rs
remotia-samples/examples/dry_vp9_encoding/: main.rs
remotia-samples/examples/dry_x264_encoding/: main.rs
remotia-samples/examples/dry_x265_encoding/: main.rs
remotia-samples/examples/pool_encoding_client/: main.rs
remotia-samples/examples/pool_encoding_server/: main.rs
remotia-samples/examples/srt_client/: main.rs
remotia-samples/examples/srt_server/: main.rs
remotia-serialization-utils/: Cargo.toml
remotia-serialization-utils/src/: bincode.rs
remotia-srt/: Cargo.toml
remotia-srt/src/: lib.rs  receiver.rs  sender.rs
remotia/src/: error.rs  lib.rs  types.rs
remotia/src/client/: mod.rs
scripts/: ffmpeg_server.sh  ffplay_client.sh  set_env.sh  set_ffmpeg_pkg_config_path.sh  start_xvfb.sh
scripts/network/: simulate_delay.sh  simulate_packet_loss.sh  simulate_rate.sh  simulate_rate_10mbit.sh  simulate_rate_5mbit.sh
src/: lib.rs
src/client/: error.rs  mod.rs
src/common/: mod.rs  network.rs  window.rs
src/server/: error.rs  mod.rs  types.rs
utils/: linux_ffmpeg.rs
(+146 files in other folders)
