[package]
name = "remotia"
version = "0.1.0"
edition = "2021"

[dependencies]
remotia-core = { path = "./remotia-core" }
remotia-buffer-utils = { path = "./remotia-buffer-utils", optional = true }
remotia-core-capturers = { path = "./remotia-core-capturers", optional = true  }
remotia-core-transmission = { path = "./remotia-core-transmission", optional = true  }
remotia-core-renderers = { path = "./remotia-core-renderers", optional = true  }
remotia-profilation-utils = { path = "./remotia-profilation-utils", optional = true  }
remotia-serialization-utils = { path = "./remotia-serialization-utils", optional = true  }

[features]
default = []
buffers = ["remotia-buffer-utils"]
capture = ["remotia-core-capturers"]
transmission = ["remotia-core-transmission"]
render = ["remotia-core-renderers"]
profilation = ["remotia-profilation-utils"]
serialization = ["remotia-serialization-utils"]
