[package]
name = "remotia-buffer-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remotia-core = { path = "../remotia-core" }

log = "0.4.14"

async-trait = "0.1.51"
bytes = "1.1.0"
tokio = "1.17.0"
