[package]
name = "remotia-core-capturers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remotia-core = { path = "../remotia-core" }

env_logger = "0.9.0"
log = "0.4.14"

async-trait = "0.1.51"
bytes = "1.1.0"

scrap = "0.5"
