[package]
name = "remotia-core-codecs"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread"]

[dependencies]
remotia-core = { path = "../remotia-core" }

env_logger = "0.9.0"
log = "0.4.14"

async-trait = "0.1.51"
bytes = "1.1.0"

rayon = "1.5.1"

