[package]
name = "remotia-core-renderers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remotia = { path = "../remotia/" }   
env_logger = "0.9.0"
log = "0.4.14"

async-trait = "0.1.51"
bytes = "1.1.0"

beryllium = { version = "0.7.6", features = ["use-raw-window-handle"] }
pixels = "0.7.0"
zstring = "0.1.2"
