[package]
name = "remotia-core-renderers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remotia-core = { path = "../remotia-core" }
remotia-buffer-utils = { path = "../remotia-buffer-utils" }

env_logger = "0.10.0"
log = "0.4.14"

async-trait = "0.1.68"

pixels = "0.12.1"
winit = "0.28.6"
