[package]
name = "remotia-core-transmission"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.28.2"
features = ["net", "io-util"]

[dependencies]
remotia-core = { path = "../remotia-core" }
remotia-buffer-utils = { path = "../remotia-buffer-utils" }
log = "0.4.18"
async-trait = "0.1.68"
