[package]
name = "remotia-core"
version = "0.1.0"
authors = ["Lorenzo Catania <aegroto@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Open source framework for the development of remote rendering software in pure Rust"
repository = "https://github.com/remotia/remotia"
readme = "README.md"
keywords = ["video","encoding","streaming","gaming"]
categories = ["compression","encoding","multimedia"]

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread"]

[dev-dependencies]
tokio-openssl = '0.4'
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.4"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
scrap = "0.5"
thiserror = "1.0.30"
cstr = "0.2.9"
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] } 
chrono = "0.4.19"
clap = "3.0.0-beta.5"

srt-tokio = "0.3.0"
futures = "0.3.18"
bytes = "1.1.0"
bincode = "1.3.3"
async-trait = "0.1.51"

object-pool = "0.5.4"

socket2 = "0.4.2"

rand = "0.8.4"

itertools = "0.10.3"

rayon = "1.5.1"
