[package]
name = "remotia-ffmpeg-codecs"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread"]

[dependencies]
rsmpeg = "0.7.0"
env_logger = "0.9.0"
log = "0.4.14"

async-trait = "0.1.51"
bytes = "1.1.0"

cstr = "0.2.9"

bincode = "1.3.3"

remotia = { path = "../remotia/" }   
