[package]
name = "remotia-serialization-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
remotia-core = { path = "../remotia-core" }
remotia-buffer-utils = { path = "../remotia-buffer-utils" }
async-trait = "0.1.68"
bincode = "2.0.0-rc.3"
