[package]
name = "remotia-srt"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread"]

[dependencies]
remotia = { path = "../remotia/" }
env_logger = "0.9.0"
log = "0.4.14"

async-trait = "0.1.51"

srt-tokio = "0.3.0"
futures = "0.3.18"
bytes = "1.1.0"
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] } 
