[package]
name = "remotia-buffer-utils-macros"
version = "0.1.2"
description = "Macros for buffer management utilities of remotia, an open source framework for the development of remote rendering software in pure Rust"
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
