[package]
name = "remotia-core-capturers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remotia-core = { path = "../remotia-core" }
remotia-buffer-utils = { path = "../remotia-buffer-utils" }

log = "0.4.14"

async-trait = "0.1.68"

scrap = "0.5"
y4m = "0.8.0"
