[package]
name = "remotia-core-capturers"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Common capturing components of remotia, an open source framework for the development of remote rendering software in pure Rust"
repository = "https://github.com/remotia/remotia"
keywords = ["video", "encoding", "streaming", "gaming"]
categories = ["compression", "encoding", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remotia-core = { path = "../remotia-core", version = "0.1.1" }
remotia-buffer-utils = { path = "../remotia-buffer-utils", version = "0.1.3" }

log = "0.4.14"

async-trait = "0.1.68"

scrap = "0.5"
y4m = "0.8.0"
