[package]
name = "remotia-core-renderers"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core rendering components of remotia, an open source framework for the development of remote rendering software in pure Rust"
repository = "https://github.com/remotia/remotia"
keywords = ["video", "encoding", "streaming", "gaming"]
categories = ["compression", "encoding", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remotia-core = { path = "../remotia-core", version = "0.1.1" }
remotia-buffer-utils = { path = "../remotia-buffer-utils", version = "0.1.1" }

env_logger = "0.10.0"
log = "0.4.14"

async-trait = "0.1.68"

pixels = "0.15"
winit = "0.29"
