[package]
name = "remotia-core"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "sync", "time"]

[dev-dependencies]
rand = "0.8.4"

[dependencies]
env_logger = "0.10.0"
log = "0.4.14"
scrap = "0.5"
futures = "0.3.28"
rand = "0.8.5"

bytes = "1.1.0"
async-trait = "0.1.68"
