[package]
name = "remotia-profilation-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Profilation utilities for remotia, an open source framework for the development of remote rendering software in pure Rust"
repository = "https://github.com/remotia/remotia"
keywords = ["video", "encoding", "streaming", "gaming"]
categories = ["compression", "encoding", "multimedia"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remotia-core = { path = "../remotia-core", version = "0.1.1" }
log = "0.4.14"
async-trait = "0.1.68"
bytes = "1.1.0"
