[package]
name = "remotia"
version = "0.1.0"
authors = ["Lorenzo Catania <aegroto@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Open source framework for the development of remote rendering software in pure Rust"
repository = "https://github.com/remotia/remotia"
readme = "README.md"
keywords = ["video", "encoding", "streaming", "gaming"]
categories = ["compression", "encoding", "multimedia"]

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "sync", "time"]

[dev-dependencies]
rand = "0.8.4"

[dependencies]
env_logger = "0.10.0"
log = "0.4.14"
scrap = "0.5"
futures = "0.3.28"
rand = "0.8.5"

bytes = "1.1.0"
async-trait = "0.1.68"

remotia-core = { path = "../remotia-core" }
remotia-buffer-utils = { path = "../remotia-buffer-utils", optional = true }
remotia-core-capturers = { path = "../remotia-core-capturers", optional = true }
remotia-core-transmission = { path = "../remotia-core-transmission", optional = true }
remotia-core-renderers = { path = "../remotia-core-renderers", optional = true }
remotia-profilation-utils = { path = "../remotia-profilation-utils", optional = true }
remotia-serialization-utils = { path = "../remotia-serialization-utils", optional = true }

[features]
default = []
buffers = ["remotia-buffer-utils"]
capture = ["remotia-core-capturers"]
transmission = ["remotia-core-transmission"]
render = ["remotia-core-renderers"]
profilation = ["remotia-profilation-utils"]
serialization = ["remotia-serialization-utils"]
